# mini-compiler

./: CMakeLists.txt  README.md
config/: lexical_config.csv
include/array_list/: array_list.cpp  array_list.h
include/lexical_analyzer/: lexical_analyzer.cpp  lexical_analyzer.h
include/node/: node.cpp  node.h
include/operations_analyzer/: operations_analyzer.h
include/stack/: stack.cpp  stack.h
include/token_provider/: token_provider.cpp  token_provider.h
interface/: node_struct.h  type_token.h
src/: code.txt  main.cpp
src/test/: array_list.txt  main_lexical.txt  main_operations.txt  operations_analyzer.txt  test.txt  test_lexic.txt
